Primeira versão das funcionalidades de inclusão, alteração, exclusão, recuperação de um carro e recuperação da lista em funcionamento. Mudanças a serem submetidas: 	modified:   examples/poo/poo.py 	modified:   system/classes/controller/Carro_controller.py 	modified:   system/classes/controller/Main_controller.py 	modified:   system/classes/model/Carro.py 	modified:   system/classes/model/database/Carro_db.py 	modified:   system/swagger.yml 	modified:   system/tests/model/database/test_inserir_carro.py 	modified:   system/util/util.py
